# swapi-graphql-rs

./: Cargo.toml  README.md
data/: humans.json
src/: main.rs  schema.rs
