[package]
name = "swapi-graphql-rs"
version = "0.1.0"
authors = ["Darren Beukes <code@darrenbeukes.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.14.2"
uuid = { version = "0.8", features = ["v4"] }
